--- a/frontend/src/components/Cart/CartItemCard.css
+++ b/frontend/src/components/Cart/CartItemCard.css
@@ -1,43 +1,42 @@
 .CartItemCard {
     display: flex;
     padding: 1vmax;
-    height: 11vmax;
     align-items: flex-start;
     box-sizing: border-box;
     overflow: hidden;
   }
-  .CartItemCard >a> img {
-    width: 10vmax; 
-    height: 10vmax;
+  .CartItemCard img {
+    width: 10vmax;
     object-fit:contain;   
   }
   
-  .CartItemCard > div {
+   .cart-item-info {
     display: flex;
     margin: 0.3vmax 1vmax;
     flex-direction: column;
+    width: 75%;
   }
   
-  .CartItemCard > div > a {
-    font: 600 1.2vmax cursive;
+   .cart-item-info > a {
+    font: 600 1.2vmax  ;
     color: rgba(24, 24, 24, 0.815);
     text-decoration: none;
     margin-top: 1vmax;
   }
   
-  .CartItemCard > div > span {
+   .cart-item-info > span {
     font: 300 1vmax "Roboto";
     margin-top: .4vmax;
     color: rgba(24, 24, 24, 0.815);
   }
   
-  .CartItemCard > div > p {
+   .cart-item-info > p {
     color: red;
     margin-top: 1vmax;
     font: 100 1vmax "Roboto";
     cursor: pointer;
   }
-  .CartItemCard > div > p:hover{
+   .cart-item-info > p:hover{
       text-decoration: underline;
   }
   @media screen and (max-width: 640px) {
@@ -49,19 +48,20 @@
       width: 10vmax;
     }
   
-    .CartItemCard > div {
+     .cart-item-info {
       margin: 1vmax 2vmax;
+      width: 55%;
     }
   
-    .CartItemCard > div > a {
-      font: 600 2vmax cursive;
+     .cart-item-info > a {
+      font-size: 1.5vmax  ;
     }
   
-    .CartItemCard > div > span {
-      font: 300 1.9vmax "Roboto";
+     .cart-item-info > span {
+      font: 300 1.5vmax "Roboto";
     }
   
-    .CartItemCard > div > p {
-      font: 100 1.8vmax "Roboto";
+     .cart-item-info > p {
+      font: 100 1.1vmax "Roboto";
     }
   }
